src/objects/Staging_Record__c.object
<CustomObject>
    <description>This will the object where records will be parsed and processed before they are finally inserted</description>
    <fields>
        <fullName>Avaya_UCID__c</fullName>
        <label>Avaya UCID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSAT_File__c</fullName>
        <description>This is a Master-Detail relationship to the CSAT File from which the fields of the Staging Record object are populated</description>
        <inlineHelpText>Select the CSAT File from which the Staging Record Object was populated</inlineHelpText>
        <label>CSAT File</label>
        <referenceTo>CSAT_File__c</referenceTo>
        <relationshipLabel>Staging Record</relationshipLabel>
        <relationshipName>Staging_Record</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Column_Heading__c</fullName>
        <description>This will hold the column heading of attached CSV files on CSAT File object</description>
        <inlineHelpText>Enter the column heading of the Phone Survey CSV file</inlineHelpText>
        <label>Column Heading</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Column_Number__c</fullName>
        <description>It holds the column number of the attached CSV file on CSAT File object</description>
        <inlineHelpText>Please enter the column number on the attached CSV file on CSAT File object</inlineHelpText>
        <label>Column Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contains_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates field indicates if a staging record has an error</description>
        <inlineHelpText>Check this box if record contains an error</inlineHelpText>
        <label>Contains Error?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <description>This will store row and column errors encountered when processing Phone Survey CSV files</description>
        <inlineHelpText>This will store row and column errors encountered when processing Phone Survey CSV files</inlineHelpText>
        <label>Error</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feedback_Date_Time__c</fullName>
        <label>Feedback Date/Time</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q10_Specific_Issue_Resolved__c</fullName>
        <description>&quot;Q11 Was the specific issue you called about on 
(INSERT DATE) resolved?&quot;</description>
        <inlineHelpText>Was the specific issue you called about on resolved?</inlineHelpText>
        <label>Q10-Specific Issue Resolved?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q11_Contacted_Multiple_Times__c</fullName>
        <description>&quot;Q12 Just to check, have you contacted the USA.GOV
Federal Information Line about this particular issue 
more than once? When you respond, please think about 
and include all channels of contact, including phone 
calls, Emails, researching information on USA.GOV’s 
website and so on. (RECORD ONE)&quot;</description>
        <inlineHelpText>Have you contacted the USA.GOV
Federal Information Line about this particular issue 
more than once?</inlineHelpText>
        <label>Q11-Contacted Multiple Times</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q12_Method_of_Contact_1__c</fullName>
        <description>&quot;Q13 Which of these methods of contact
 did you use to try to resolve this particular
 issue before calling the Federal Information
  Line? Did you try…?&quot;</description>
        <inlineHelpText>&quot;Q13 Which of these methods of contact
 did you use to try to resolve this particular
 issue before calling the Federal Information
  Line? Select all that apply</inlineHelpText>
        <label>Q12-Method of Contact 1</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q12_Method_of_Contact_2__c</fullName>
        <label>Q12-Method of Contact 2</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q12_Method_of_Contact_3__c</fullName>
        <label>Q12-Method of Contact 3</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q12_Method_of_Contact_DK__c</fullName>
        <label>Q12-Method of Contact DK</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q12_Method_of_Contact_REF__c</fullName>
        <label>Q12-Method of Contact REF</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q12a_What_Other_Method__c</fullName>
        <description>Q13_OTHER  Other Specify Verbatim</description>
        <inlineHelpText>Type other methods you tried</inlineHelpText>
        <label>Q12a-What Other Method?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q13_Contact_Another_Agency__c</fullName>
        <description>&quot;Q14 Did you contact some other government agency 
before contacting USA.GOV?&quot;</description>
        <inlineHelpText>Did you contact some other government agency 
before contacting USA.GOV?</inlineHelpText>
        <label>Q13-Contact Another Agency?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q14_Who_Contact_Before__c</fullName>
        <description>&quot;Q15 Who did you contact before you called on (INSERT
 DATE)?&quot;</description>
        <inlineHelpText>Q15 Who did you contact before you called?</inlineHelpText>
        <label>Q14-Who Contact Before?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q16_Ease_to_get_Question_Answered__c</fullName>
        <description>&quot;Q17 How easy was it for you to get your question 
answered or the information you needed from the 
Federal Information Line? Please use a scale from 1 to 10 
where a 1 means “Very Difficult” and a 10 means
“Very Easy”.
(IF NEEDED: You may use any number between 1 and 10.)&quot;</description>
        <inlineHelpText>How easy was it for you to get your question answered or the information you needed from the 
Federal Information Line?</inlineHelpText>
        <label>Q16-Ease to get Question Answered</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q19_Main_Contact_Reason__c</fullName>
        <description>&quot;Q21  If I may ask, what was the main reason for your call 
on (INSERT DATE)?&quot;</description>
        <inlineHelpText>Q21  If I may ask, what was the main reason for your call?</inlineHelpText>
        <label>Q19-Main Contact Reason</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q19a_Contact_Reason_Comment__c</fullName>
        <description>Q21_OTHER Other Specify Verbatim</description>
        <inlineHelpText>What are other contact reasons?</inlineHelpText>
        <label>Q19a-Contact Reason Comment</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q1_Amount_of_Personal_Effort__c</fullName>
        <description>&quot;Q16 Please rate the amount of effort that you personally had 
to put forth to get your request addressed. Please use a scale 
from 1 to 10 where a 1 means “Hard – required a lot of effort 
to get my issue addressed” and a 10 means “Easy – required 
no effort to get my issue or question addressed”.
(IF NEEDED: You may use any number between 1 and 10.)
&quot;</description>
        <inlineHelpText>Please rate the amount of effort that you personally had to put forth to get your request addressed?</inlineHelpText>
        <label>Q15-Amount of Personal Effort</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q1_Overall_Quality__c</fullName>
        <description>&quot;Q1 Thinking about the entire experience of the 
phone call you made to the Federal Information
Line on (INSERT DATE), how would you rate the
overall quality of the service you received using
a 0 to 10 scale where 0 is Poor and 10 is 
Excellent?
&quot;</description>
        <inlineHelpText>&quot;Q1 Thinking about the entire experience of the 
phone call you made to the Federal Information
Line on (INSERT DATE), how would you rate the
overall quality of the service you received using
a 0 to 10 scale where 0 is Poor and 10 is 
Excellent?
&quot;</inlineHelpText>
        <label>Q1-Overall Quality?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q20_Placed_on_Hold__c</fullName>
        <description>&quot;Q8 Did the Information Specialist place you on hold at 
any time during your call? (RECORD ONE)&quot;</description>
        <inlineHelpText>Did the Information Specialist place you on hold at 
any time during your call?</inlineHelpText>
        <label>Q20-Placed on Hold?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q21_How_You_Heard_About_USA_GOV_REF__c</fullName>
        <label>Q21-How You Heard About USA.GOV Tel REF</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q21_How_You_Heard_About_USA_GOV_Tel_1__c</fullName>
        <description>&quot;Q20 How did you hear about USA.GOV’s telephone 
service? Was it from…?
(READ LIST. SELECT AS MANY AS APPLY)&quot;</description>
        <inlineHelpText>How did you hear about USA.GOV’s telephone service?</inlineHelpText>
        <label>Q21-How You Heard About  USA.GOV Tel 1</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q21_How_You_Heard_About_USA_GOV_Tel_2__c</fullName>
        <label>Q21-How You Heard About USA.GOV Tel 2</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q21_How_You_Heard_About_USA_GOV_Tel_3__c</fullName>
        <label>Q21-How You Heard About USA.GOV Tel 3</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q21_How_You_Heard_About_USA_GOV_Tel_DK__c</fullName>
        <label>Q21-How You Heard About USA.GOV Tel DK</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q21a_Other_Ways_Heard_USA_GOV_Tel__c</fullName>
        <description>Q20_OTHER   Other Specify Verbatim</description>
        <inlineHelpText>Key in other ways you hear about USA.GOV’s telephone 
service?</inlineHelpText>
        <label>Q21a-Other Ways Heard USA.GOV Tel</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q21b_Other__c</fullName>
        <description>Column for Q21B - Other</description>
        <inlineHelpText>Column for Q21B - Other</inlineHelpText>
        <label>Q21B - Other</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q21b__c</fullName>
        <description>Column for Q21B</description>
        <inlineHelpText>Column for Q21B</inlineHelpText>
        <label>Q21B</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q22_Call_You_to_Discuss_Open_Issues__c</fullName>
        <description>&quot;Q22 Your answers indicate you are not 
 completely satisfied with the service 
 you received or your issue has not yet 
 been resolved. 
 Would you like the Federal Information 
Line Customer Service to call you
 back to further discuss your unresolved
 question or concern? (1, 2, DK and REF)&quot;</description>
        <inlineHelpText>Would you like the Federal Information 
Line Customer Service to call you
 back to further discuss your unresolved
 question or concern?</inlineHelpText>
        <label>Q22-Call You to Discuss Open Issues</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q23_Issues_to_Discuss_on_Call_Back__c</fullName>
        <description>Q23 To help address your needs when the Federal 
Information Line contacts you, what specific issues would 
you like to discuss?</description>
        <inlineHelpText>To help address your needs when the Federal 
Information Line contacts you, what specific issues would 
you like to discuss?</inlineHelpText>
        <label>Q23-Issues to Discuss on Call Back</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q2_Overall_Quality_Comment__c</fullName>
        <description>&quot;Q2 At this question I will be typing in your answer. 
Why did you provide a rating of (INSERT RATING
FROM Q1) for the overall quality of service you 
received?
(RECORD RESPONSE. CLARIFY)&quot;</description>
        <inlineHelpText>Why did you provide a rating of (INSERT RATING
FROM Q1) for the overall quality of service you 
received?</inlineHelpText>
        <label>Q2-Overall Quality Comment</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q3_Useful_Information__c</fullName>
        <description>&quot;Q3 How useful was the information provided from
the Federal Information Line? Please use a scale 
from 0 to 10 where 0 is not at all useful and 10 is 
extremely useful.
(IF NEEDED: You may use any number between
0 and 10.)&quot;</description>
        <inlineHelpText>How useful was the information provided from
the Federal Information Line?</inlineHelpText>
        <label>Q3-Useful Information?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q4_Likely_Use_USA_gov_Again__c</fullName>
        <description>&quot;Q4 How likely are you to use the Federal Information 
Line telephone service again? Please use a scale 
from 0 to 10 where 0 is not at all likely and 10 is 
extremely likely.
(IF NEEDED: You may use any number between 0 
and 10)&quot;</description>
        <inlineHelpText>How likely are you to use the Federal Information 
Line telephone service again?</inlineHelpText>
        <label>Q4-Likely Use USA.gov Again?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q5_Likely_Recommend_USA_gov__c</fullName>
        <description>&quot;Q5 How likely is it that you would recommend the 
Federal Information Line telephone service to a friend
or colleague? Please use a scale from 0 to 10 where 
0 is not at all likely and 10 is extremely likely.
(IF NEEDED: You may use any number between 0
 and 10)&quot;</description>
        <inlineHelpText>How likely is it that you would recommend the 
Federal Information Line telephone service to a friend
or colleague?</inlineHelpText>
        <label>Q5-Likely Recommend USA.gov?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q6_Compared_to_Expectation__c</fullName>
        <description>&quot;Q6 Please tell us how USA.GOV’s service compared 
to your expectations. Was it…?
(RECORD ONE)&quot;</description>
        <inlineHelpText>Please tell us how USA.GOV’s service compared 
to your expectations. Was it…?</inlineHelpText>
        <label>Q6-Compared to Expectations?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q7_Process_of_Getting_a_Response__c</fullName>
        <description>Q7a How would you rate the total amount 
 of time you spent on the phone, including
  the time spent in the IVR when you called
  on (INSERT DATE)? Please use a 1 to 10 
 scale where 1 is poor and 10 is excellent.</description>
        <inlineHelpText>Rate the total amount of time you spent on the phone, including the time spent in the IVR when you called?</inlineHelpText>
        <label>Q7-Process of Getting a Response?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q7a_Waiting_Time_for_Specialist__c</fullName>
        <description>Q7b And, using that same scale, how would you rate
the length of time you spent waiting to speak to an 
Information Specialist?
(IF NEEDED: Please use a 1 to 10 scale where 1 is 
poor and 10 is excellent. You may use any number 
between 1 and 10.)</description>
        <inlineHelpText>And, using that same scale, how would you rate
the length of time you spent waiting to speak to an 
Information Specialist?</inlineHelpText>
        <label>Q7a-Waiting Time for Specialist</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q7b_Total_amnt_of_time_spent_on_phone__c</fullName>
        <label>Q7b-Total amnt of time spent on phone</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q8_Got_Information_Directly__c</fullName>
        <description>&quot;Q9 Did the Information Specialist give you the 
information you needed directly, or did they tell you 
how to get the information you needed on your own? 
(RECORD ONE)&quot;</description>
        <inlineHelpText>Did the Information Specialist give you the 
information you needed directly, or did they tell you 
how to get the information you needed on your own?</inlineHelpText>
        <label>Q8-Got Information Directly?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q9a_IS_Agent_Overall_Quality__c</fullName>
        <description>10a Overall quality of service (ALWAYS ASK 1ST)</description>
        <inlineHelpText>Overall quality of service of the Information Specialist ?</inlineHelpText>
        <label>Q9a-IS Agent Overall Quality</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q9b_IS_Agent_Understanding_of_Question__c</fullName>
        <description>10b. Understanding your question or concern</description>
        <inlineHelpText>Information Specialist Understands your question or concern?</inlineHelpText>
        <label>Q9b-IS Agent Understanding of Question</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q9c_IS_Agent_Desire_to_Resolve_Question__c</fullName>
        <description>&quot;10c. Having the desire to resolve your 
question or concern&quot;</description>
        <inlineHelpText>Rate Information Specialist desire to resolve your 
question or concern?</inlineHelpText>
        <label>Q9c-IS Agent Desire to Resolve Question</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q9d_IS_Agent_Being_Knowledgeable__c</fullName>
        <description>10d. Being knowledgeable about what to do</description>
        <inlineHelpText>Was the Information Specialist Being knowledgeable about what to do?</inlineHelpText>
        <label>Q9d-IS Agent Being Knowledgeable</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q9e_IS_Agent_Treating_as_Valued_Customer__c</fullName>
        <description>10e. Treating you like a valued customer</description>
        <inlineHelpText>Did the Information Specialist treated you as a valued customer? Please rate the Agent</inlineHelpText>
        <label>Q9e-IS Agent Treating as Valued Customer</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q9f_IS_Agent_Being_Courteous__c</fullName>
        <description>10f. Being courteous</description>
        <inlineHelpText>Was the Information Specialist Being courteous?</inlineHelpText>
        <label>Q9f-IS Agent Being Courteous</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q9g_IS_Agent_Accuracy_of_Info_Provided__c</fullName>
        <description>&quot;10g. The accuracy of the information they
 provided&quot;</description>
        <inlineHelpText>Was the Info provided by the Information Specialist accurate?</inlineHelpText>
        <label>Q9g-IS Agent Accuracy of Info Provided</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Row_Number__c</fullName>
        <description>The row number of the record on the source uploaded CSV file</description>
        <inlineHelpText>Enter the row number on the CSV file</inlineHelpText>
        <label>Row Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SQ1_Contact_USA_gov__c</fullName>
        <description>&quot;SQ1 Just to check, are you the person who 
placed the call to the USA.GOV Federal 
Information Line on (INSERT DATE)?&quot;</description>
        <inlineHelpText>&quot;SQ1 Just to check, are you the person who 
placed the call to the USA.GOV Federal 
Information Line on (INSERT DATE)?&quot;</inlineHelpText>
        <label>SQ1 - Contact USA.gov?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Staging Record</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Contains_Error__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Staging_Record__c.Column_Errors</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Staging-{00000000}</displayFormat>
        <label>Staging Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging Records</pluralLabel>
    <recordTypes>
        <fullName>Column_Errors</fullName>
        <active>true</active>
        <description>This will control failed CSV file process errors</description>
        <label>Column Errors</label>
    </recordTypes>
    <recordTypes>
        <fullName>Row_Data</fullName>
        <active>true</active>
        <description>This will control successfully processed CSV files from CSAT File object</description>
        <label>Row Data</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>